apps/argocd/base/argo-cd-ui-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argo-cd-ui
  annotations: []
spec:
  ingressClassName: traefik
  tls:
  - hosts:
    - &argocdhost argocd.k8s.home.lauer.dk
    secretName: argocd-k8s-certificate
  rules:
  - host: *argocdhost
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: argocd-server
            port:
              name: http
